<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/set_root_title">
    <Preference
        app:icon="@drawable/ic_accent_24"
        app:key="@string/set_key_ui"
        app:summary="@string/set_ui_desc"
        app:title="@string/set_ui" />

    <Preference
        app:icon="@drawable/ic_config_24"
        app:key="@string/set_key_personalize"
        app:summary="@string/set_personalize_desc"
        app:title="@string/set_personalize" />

    <Preference
        app:icon="@drawable/ic_song_24"
        app:key="@string/set_key_music"
        app:summary="@string/set_content_desc"
        app:title="@string/set_content" />

    <Preference
        app:icon="@drawable/ic_play_24"
        app:key="@string/set_key_audio"
        app:summary="@string/set_audio_desc"
        app:title="@string/set_audio" />

    <PreferenceCategory
        app:key="@string/set_key_provider_category"
        app:title="@string/set_connections" />

    <Preference
        app:key="@string/set_key_lastfm"
        app:summary="@string/set_lastfm_disconnected"
        app:title="@string/set_lastfm" />

    <PreferenceCategory app:title="@string/lbl_crew">

        <Preference
            app:key="@string/set_key_crew_display_name"
            app:summary="@string/set_crew_display_name_desc"
            app:title="@string/set_crew_display_name" />

        <Preference
            app:key="@string/set_key_crew_avatar"
            app:summary="@string/set_crew_avatar_desc_default"
            app:title="@string/set_crew_avatar" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="@string/set_key_crew_push_pull_enabled"
            app:summary="@string/set_crew_push_pull_enabled_desc"
            app:title="@string/set_crew_push_pull_enabled" />

        <Preference
            app:key="@string/set_key_crew_relay_locator"
            app:summary="@string/set_crew_relay_not_configured"
            app:title="@string/set_crew_relay" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/set_library_and_files">

        <org.oxycblt.auxio.settings.ui.WrappedDialogPreference
            app:key="@string/set_key_music_dirs"
            app:summary="@string/set_locations_desc"
            app:title="@string/set_locations" />

        <Preference
            app:key="@string/set_key_download_destination_picker"
            app:summary="@string/set_download_destination_unselected"
            app:title="@string/set_download_destination" />

        <ListPreference
            app:defaultValue="2147483648"
            app:entries="@array/set_playback_cache_max_size_entries"
            app:entryValues="@array/set_playback_cache_max_size_values"
            app:key="@string/set_key_playback_cache_max_size"
            app:title="@string/set_playback_cache_max_size"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="2592000000"
            app:entries="@array/set_playback_cache_unused_age_entries"
            app:entryValues="@array/set_playback_cache_unused_age_values"
            app:key="@string/set_key_playback_cache_unused_age"
            app:title="@string/set_playback_cache_unused_age"
            app:useSimpleSummaryProvider="true" />

        <Preference
            app:key="@string/set_key_clear_playback_cache"
            app:summary="@string/set_clear_playback_cache_desc"
            app:title="@string/set_clear_playback_cache" />

        <Preference
            app:key="@string/set_key_reindex"
            app:summary="@string/set_reindex_desc"
            app:title="@string/set_reindex" />

        <Preference
            app:key="@string/set_key_rescan"
            app:summary="@string/set_rescan_desc"
            app:title="@string/set_rescan" />

    </PreferenceCategory>

</PreferenceScreen>
