<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:title="@string/set_audio">
    <PreferenceCategory android:title="@string/set_playback">

        <SwitchPreferenceCompat
            app:key="@string/set_key_headset_autoplay"
            app:summary="@string/set_headset_autoplay_desc"
            app:title="@string/set_headset_autoplay" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="@string/set_key_rewind_prev"
            app:summary="@string/set_rewind_prev_desc"
            app:title="@string/set_rewind_prev" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="@string/set_key_repeat_pause"
            app:summary="@string/set_repeat_pause_desc"
            app:title="@string/set_repeat_pause" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="@string/set_key_remember_pause"
            app:summary="@string/set_remember_pause_desc"
            app:title="@string/set_remember_pause" />

        <org.oxycblt.auxio.settings.ui.IntListPreference
            app:defaultValue="0"
            app:entries="@array/entries_transition_mode"
            app:entryValues="@array/values_transition_mode"
            app:key="@string/set_key_transition_mode"
            app:title="@string/set_transition_mode" />

        <org.oxycblt.auxio.settings.ui.IntListPreference
            app:defaultValue="5000"
            app:entries="@array/entries_crossfade_duration"
            app:entryValues="@array/values_crossfade_duration_ms"
            app:key="@string/set_key_crossfade_duration_ms"
            app:summary="@string/set_crossfade_duration_desc"
            app:title="@string/set_crossfade_duration" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/set_playback_and_downloads">

        <ListPreference
            app:defaultValue="160000"
            app:entries="@array/entries_stream_quality"
            app:entryValues="@array/values_stream_quality"
            app:key="@string/set_key_playback_quality"
            app:title="@string/set_playback_quality"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="320000"
            app:entries="@array/entries_stream_quality"
            app:entryValues="@array/values_stream_quality"
            app:key="@string/set_key_download_quality"
            app:title="@string/set_download_quality"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/set_replay_gain">

        <org.oxycblt.auxio.settings.ui.IntListPreference
            app:defaultValue="@integer/replay_gain_dynamic"
            app:entries="@array/entries_replay_gain"
            app:entryValues="@array/values_replay_gain"
            app:key="@string/set_key_replay_gain"
            app:title="@string/set_replay_gain_mode" />

        <org.oxycblt.auxio.settings.ui.WrappedDialogPreference
            app:key="@string/set_key_pre_amp"
            app:summary="@string/set_pre_amp_desc"
            app:title="@string/set_pre_amp" />

    </PreferenceCategory>
</PreferenceScreen>
