<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_24"
        android:title="@string/lbl_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort_24"
        android:title="@string/lbl_sort"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_batch_actions"
        android:icon="@drawable/ic_more_24"
        android:title="@string/lbl_batch_actions"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_edit_order"
        android:icon="@drawable/ic_sort_24"
        android:title="@string/lbl_edit_order"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_rename"
        android:title="@string/lbl_rename"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_shippy_pin"
        android:title="@string/lbl_pin"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_change_artwork"
        android:title="@string/lbl_change_artwork"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete"
        android:title="@string/lbl_delete"
        android:visible="false"
        app:showAsAction="never" />

</menu>
