<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_library_edit_order"
        android:icon="@drawable/ic_sort_24"
        android:title="@string/lbl_edit_order"
        android:visible="false" />
    <item
        android:id="@+id/action_library_pin"
        android:icon="@drawable/ic_pin_24"
        android:title="@string/lbl_pin" />
    <item
        android:id="@+id/action_library_rename"
        android:icon="@drawable/ic_edit_24"
        android:title="@string/lbl_rename" />
    <item
        android:id="@+id/action_library_artwork"
        android:icon="@drawable/ic_edit_24"
        android:title="@string/lbl_change_artwork" />
    <item
        android:id="@+id/action_library_delete"
        android:icon="@drawable/ic_delete_24"
        android:title="@string/lbl_delete" />
</menu>
