<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_open_queue"
        android:icon="@drawable/ic_playlist_24"
        android:title="@string/lbl_queue" />
    <item
        android:id="@+id/action_provider_track_info"
        android:icon="@drawable/ic_details_24"
        android:title="@string/lbl_song_detail" />
    <item
        android:id="@+id/action_share_original_link"
        android:icon="@drawable/ic_share_24"
        android:title="@string/lbl_share_original_link"
        android:visible="false" />
    <item
        android:id="@+id/action_share_with_shippy"
        android:icon="@drawable/ic_share_24"
        android:title="@string/lbl_share_with_shippy"
        android:visible="false" />
    <item
        android:id="@+id/action_remove_download"
        android:icon="@drawable/ic_delete_24"
        android:title="@string/lbl_remove_download"
        android:visible="false" />
</menu>
